structmeta-tests/tests/compile_fail/struct_meta/option_hash_map.stderr
error[E0277]: the trait bound `HashMap<String, LitInt>: Parse` is not satisfied
 --> tests/compile_fail/struct_meta/option_hash_map.rs:6:18
  |
6 |     rest: Option<HashMap<String, LitInt>>,
  |     ----         ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Parse` is not implemented for `HashMap<String, LitInt>`
  |     |
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `Parse`:
            Example
            std::boxed::Box<T>
            proc_macro2::TokenStream
            proc_macro2::TokenTree
            proc_macro2::Group
            proc_macro2::Punct
            syn::Ident
            proc_macro2::Literal
          and $N others
note: required by a bound in `ParseBuffer::<'a>::parse`
 --> $CARGO/syn-2.0.29/src/parse.rs
  |
  |     pub fn parse<T: Parse>(&self) -> Result<T> {
  |                     ^^^^^ required by this bound in `ParseBuffer::<'a>::parse`
